# HomePilot

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.beads/: metadata.json
.claude/commands/: hp-add.md  hp-backup.md  hp-debug.md  hp-delete.md  hp-deploy.md  hp-hosts.md  hp-import.md  hp-logs.md  hp-migrate.md  hp-registry.md  hp-restart.md  hp-restore.md  hp-start.md  hp-status.md  hp-stop.md
src/homepilot/: __init__.py  __main__.py  app.py  config.py  models.py
src/homepilot/providers/: __init__.py  base.py  proxmox.py  truenas.py
src/homepilot/screens/: __init__.py  add_app.py  add_resource.py  app_detail.py  bootstrap.py  cleanup_resource.py  config_editor.py  dashboard.py  delete_app.py  deploy.py  host_editor.py  host_manager.py  import_config.py  migrate.py  registry_browser.py  resource_detail.py  theme_picker.py
src/homepilot/services/: __init__.py  bootstrap.py  deployer.py  docker.py  health.py  migrator.py  netdata.py  proxmox_api.py  proxmox_deployer.py  registry.py  remote_state.py  ssh.py  truenas.py
src/homepilot/widgets/: __init__.py  app_card.py  log_viewer.py  resource_card.py  status_bar.py
tests/: test_cli.py  test_config.py  test_deployer.py  test_migrator.py  test_models.py  test_provider_registry.py  test_proxmox.py
wiki/: Adding-New-Providers.md  Getting-Started.md  Home.md  Multi-Host-Configuration.md  Proxmox-Provider.md  TrueNAS-Provider.md  _Sidebar.md
